src/test/ui/feature-gates/feature-gate-derive_default_enum.rs
#[derive(Default)] //~ ERROR deriving `Default` on enums is experimental
enum Foo {
    #[default]
    Alpha,
}

fn main() {}
